# peope_tracking

./: README.md
catkin_my_people_2/src/face_detection_my/: CMakeLists.txt  package.xml
catkin_my_people_2/src/face_detection_my/include/: face_detection_my.h
catkin_my_people_2/src/face_detection_my/src/: face_detection_my.cpp
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/object_detection_msgs/: CMakeLists.txt  package.xml
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/object_detection_msgs/msg/: BoundingBoxMeasurementsArray.msg
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/people_detection/: CMakeLists.txt
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/people_detection/include/people_detection/: people_detection.h
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/people_detection/launch/: people_detection.launch
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/people_detection/src/: people_detection.cpp
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/people_tracking/include/people_tracking/: people_tracking_kcf.h
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/people_tracking/launch/: people_tracking_kcf.launch
sort_tracking_files/ro_opencv_tracking/backup/catkin_my_people_backup/people_deepnets/people_tracking/src/: people_tracking_kcf.cpp
sort_tracking_files/ro_opencv_tracking/ros_package/src/people_deepnets/object_detection_msgs/msg/: BoundingBox.msg
sort_tracking_files/ro_opencv_tracking/ros_package/src/people_deepnets/people_detection/: package.xml
sort_tracking_files/ro_opencv_tracking/ros_package/src/people_deepnets/people_detection/launch/: people_detection.launch
sort_tracking_files/ro_opencv_tracking/ros_package/src/people_deepnets/people_detection/src/: people_detection.cpp
sort_tracking_files/ro_opencv_tracking/ros_package/src/people_deepnets/people_tracking/: CMakeLists.txt  package.xml
sort_tracking_files/ro_opencv_tracking/ros_package/src/people_deepnets/people_tracking/include/people_tracking/: people_tracking_kcf.h
sort_tracking_files/ro_opencv_tracking/ros_package/src/people_deepnets/people_tracking/src/: people_tracking_kcf.cpp
sort_tracking_files/ros_package/src/sort_tracking/include/: people_tracking_sort.h
sort_tracking_files/ros_package/src/sort_tracking/src/: people_tracking_sort.cpp
