<package format="2">
  <name>object_detection_msgs</name>
  <version>1.2.0</version>
  <description>Messages used by nodes in the object detection stack.</description>
  <maintainer email="ssrivatc@andrew.cmu.edu">Shreyas Srivatchan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/people_msgs</url>
  <author>Shreyas</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
